# m1n1

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .packit.yaml  AGENTS.md  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.h  docker-compose.yml  findings.md  flake.nix  m1n1-raw.ld  m1n1.conf.example  m1n1.ld  m5-ioreg.txt  m5-sysctl.txt  progress.md  pytest.ini  requirements.ini  requirements.txt  ruff.toml  task_plan.md  version.sh
.cargo/: config.toml
.firecrawl/: search-apple-pmgr-cpu-start.json
3rdparty_licenses/: LICENSE.BSD-2.libfdt  LICENSE.BSD-3.arm  LICENSE.BSD-3.dwc3  LICENSE.GPL-2  LICENSE.minlzma  LICENSE.tinf
data/: makelogo.sh
dts/: .editorconfig  apple-j274.dts  t8103.dtsi
font/: README.md  makefont.sh
proxyclient/: addrdump.py  adt.py  aic_test.py  asm.py  chainload.py  chickens.py  dart_dump.py  dart_fb_rebuild.py  dart_tests.py  find_all_regs.py  find_regs.py  find_sprr_regs.py  fptest.py  hacr_trap_bits.py  hv.py  i2c.py  linux.py  macho.py  malloc.py  memdump.py  proxy.py  proxyutils.py  regs.json  regs_apple.json  run_guest.py  setup.py  shell.py  sprr_test_permissions.py  sysreg.py  tgtypes.py  timer_test.py  utils.py  xnutools.py
rust/: Cargo.toml
rust/src/: adt.rs  apfs.rs  chainload.rs  dlmalloc.rs  efi.rs  float.rs  gpt.rs  lib.rs  nvme.rs  print.rs  utils.rs  wdt.rs
rust/src/gpu/: initdata.rs  mod.rs  raw.rs  types.rs
rust/src/gpu/hw/: mod.rs  t600x.rs  t602x.rs  t8103.rs  t8112.rs
rust/versions/: Cargo.toml
rust/versions/src/: lib.rs
src/: adt.c  adt.h  afk.c  afk.h  aic.c  aic.h  aic_regs.h  akf.c  akf.h  ans.c  ans.h  arm_cpu_regs.h  asc.c  asc.h  chainload.c  chainload.h  chainload_asm.S  chickens.c  chickens.h  chickens_avalanche.c  chickens_blizzard.c  chickens_cyclone_typhoon.c  chickens_everest.c  chickens_firestorm.c  chickens_hurricane_zephyr.c  chickens_icestorm.c  chickens_monsoon_mistral.c  chickens_sawtooth.c  chickens_twister.c  clk.c  clk.h  cpio.c  cpio.h  cpu_regs.h  cpufreq.c  cpufreq.h  dapf.c  dapf.h  dart.c  dart.h  (+123 more)
sysinc/: assert.h  endian.h  errno.h  limits.h  (+3 more)
(+329 files in other folders)
