[package]
name = "rust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AsahiLinux/m1n1"
license = "MIT"
publish = false

[lib]
crate-type = [ "staticlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fatfs = { path = "vendor/rust-fatfs", default-features = false, features = ["lfn", "alloc"] }
uuid = { version = "1.7.0", default-features = false }

[patch.crates-io]
uuid = { path = "vendor/uuid" }
log = { path = "vendor/log" }
bitflags = { path = "vendor/bitflags" }
cfg-if = { path = "vendor/cfg-if" }
