[package]
name = "rust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AsahiLinux/m1n1"
license = "MIT"
publish = false

[lib]
crate-type = [ "staticlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fatfs = { workspace = true, optional = true }
uuid = { version = "1.23", default-features = false, optional = true }
versions = { workspace = true }

[workspace]
resolver = "2"
members = ["versions", "vendor/rust-fatfs"]

[workspace.dependencies]
fatfs = { path = "vendor/rust-fatfs", default-features = false, features = ["lfn", "alloc"] }
versions = { path = "./versions" }

[features]
chainload = ["dep:fatfs", "dep:uuid"]
