[package]
name = "rust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AsahiLinux/m1n1"
license = "MIT"
publish = false

[lib]
crate-type = [ "staticlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fatfs = { git = "https://github.com/rafalh/rust-fatfs", rev = "4eccb50d011146fbed20e133d33b22f3c27292e7", default-features = false, features = ["lfn", "alloc"], optional = true }
uuid = {  version = "1.23", default-features = false, optional = true }
versions = { path = "./versions" }

[features]
chainload = ["dep:fatfs", "dep:uuid"]
